--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -145,7 +145,7 @@
                         <span>매장찾기</span>
                     </div>
                     <div>
-                        <img src="https://i.ibb.co/CVWr5CK/order.png" alt="order_icon">
+                        <img src="https://i.ibb.co/JC0PbGc/franchisee-Q-symbol.png" alt="franchisee-Q-symbol"/>
                         <span>가맹신청 ㆍ 문의</span>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                 <div class="section_MBvar_homeOAT">
                     <h4>HOME-OAT</h4>
                     <h5>배달주문</h5>
-                    <img src="https://i.ibb.co/jZy2yXV/footer-fast-OAT.png" alt="footer-fast-OAT">
+                    <img src="https://i.ibb.co/vHpgZjD/delivery-symbol.png" alt="delivery-symbol" />
                 </div>
             </section>
             <!-- OneAndThree's Menu -->
@@ -189,7 +189,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/WFVSkRT/sandwich-cl06-01.jpg" alt="sandwich_에그마요">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>에그마요</strong>
                                             <p>부드러운 달걀과 고소한 마요네즈가 만나<br>더 부드러운 스테디셀러</p>
                                         </div>
@@ -198,7 +198,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/jTk9Vtf/sandwich-cl01-01.jpg" alt="sandwich_이탈리안 비엔티">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>이탈리안 비엔티</strong>
                                             <p>페퍼로니, 살라미 그리고 햄이 만들어내는 최상의 조화! 전세계가 사랑하는 원앤드쓰리의 베스트셀러! Biggest Meatiest Tastiest, its’ B.M.T!</p>
                                         </div>
@@ -206,7 +206,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/d7zFc7j/sandwich-cl02-01.jpg" alt="sandwich_비엔티">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>비엔티</strong>
                                             <p>오리지널 아메리칸 스타일 베이컨의<br>풍미와 바삭함 그대로</p>
                                         </div>
@@ -214,7 +214,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/HHnq3yv/sandwich-cl04-01.jpg" alt="sandwich_햄">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>햄</strong>
                                             <p>기본 중에 기본!<br>풍부한 햄이 만들어내는<br>입 안 가득 넘치는 맛의 향연</p>
                                         </div>
@@ -222,7 +222,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/sRGpdN8/sandwich-cl05-01.jpg" alt="sandwich_참치">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>참치</strong>
                                             <p>남녀노소 누구나 좋아하는<br>담백한 참치와 고소한 마요네즈의<br>완벽한 조화</p>
                                         </div>
@@ -242,7 +242,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/0Qb2w8D/sandwich-fl01-01.jpg" alt="sandwich_로티세리 바비큐 치킨">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>로티세리 바비큐 치킨</strong>
                                             <p>촉촉한 바비큐 치킨의 풍미가득.<br>손으로 찢어 더욱 부드러운 치킨의 혁명</p>
                                         </div>
@@ -250,7 +250,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/SrpnDhg/sandwich-fl02-01.jpg" alt="sandwich_로스트 치킨">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>로스트 치킨</strong>
                                             <p>오븐에 구워 담백한 저칼로리<br>닭가슴살의 건강한 풍미</p>
                                         </div>
@@ -258,7 +258,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/KbfbQJr/sandwich-fl04-01.jpg" alt="sandwich_원쓰리 클럽">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>원쓰 클럽</strong>
                                             <p>명실공히 시그니처 원쓰!<br>치킨 슬라이스, 햄, 베이컨의 완벽한 앙상블</p>
                                         </div>
@@ -266,7 +266,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/DRgvwQD/sandwich-fl05-01.jpg" alt="sandwich_치킨 슬라이드">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>치킨 슬라이드</strong>
                                             <p>닭가슴살로 만든 치킨 슬라이스로 즐기는<br>담백한 맛!</p>
                                         </div>
@@ -274,7 +274,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/Fw8w74w/sandwich-fl06-01.jpg" alt="sandwich_베지">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>베지</strong>
                                             <p>갓 구운 빵과 신선한 7가지 야채로<br>즐기는 깔끔한 한끼</p>
                                         </div>
@@ -293,7 +293,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/hMcDLdj/sandwich-pm10-01.jpg" alt="sandwich_쉬림프">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>쉬림프</strong>
                                             <p> 탱글한 식감이 그대로 살아있는 통새우가<br>5마리 들어가 한 입 베어 먹을 때 마다<br>진짜 새우의 풍미가 가득</p>
                                         </div>
@@ -301,7 +301,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/MPsVxJf/sandwich-pm08-01.jpg" alt="sandwich_풀드 포크 바비큐">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>풀드 포크 바비큐</strong>
                                             <p>훈연한 미국 정통 스타일의 리얼 바비큐 풀드포크가 들어간 샌드위치</p>
                                         </div>
@@ -309,7 +309,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/zRpLdbT/sandwich-pm01-01.jpg" alt="sandwich_스테이크 & 치즈">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>스테이크 & 치즈</strong>
                                             <p>육즙이 쫙~<br>풍부한 비프 스테이크의 풍미가 입안 한가득</p>
                                         </div>
@@ -317,7 +317,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/5TNBS1D/sandwich-pm02-01.jpg" alt="sandwich_치킨 베이컨 아보카도">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>치킨 베이컨 아보카도</strong>
                                             <p>담백하게 닭가슴살로 만든 치킨 슬라이스와 베이컨,<br>부드러운 아보카도의 만남</p>
                                         </div>
@@ -325,7 +325,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/9syc6vp/sandwich-pm06-01.jpg" alt="sandwich_스파이시 이탈리안">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>스파이시 이탈리안</strong>
                                             <p>살라미, 페퍼로니가 입안 한가득!<br>쏘 핫한 이탈리아의 맛</p>
                                         </div>
@@ -333,7 +333,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/ggPwYjw/sandwich-pm07-01.jpg" alt="sandwich_치킨 데리야끼">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>치킨 데리야끼</strong>
                                             <p>담백한 치킨 스트립에 달콤짭쪼름한 원쓰<br>특제 데리야끼 소스와의 환상적인 만남</p>
                                         </div>
@@ -352,7 +352,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/0ZYzvfv/sandwich-bf01.png" alt="sandwich_햄, 에그 & 치즈">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>햄, 에그 & 치즈</strong>
                                             <p>푹신한 오믈렛과 햄의 가장 클래식한 조화</p>
                                         </div>
@@ -360,7 +360,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/LJrW2Y4/sandwich-bf02.png" alt="sandwich_웨스턴, 에그 & 치즈">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>웨스턴, 에그 & 치즈</strong>
                                             <p>토마토, 피망, 양파 세가지 야채가 더해져<br>더욱 신선한 하루 시작</p>
                                         </div>
@@ -368,7 +368,7 @@
                                     <div class="swiper-slide">  
                                         <div>
                                             <img src="https://i.ibb.co/t8wxvZK/sandwich-bf03.png" alt="sandwich_베이컨, 에그 & 치즈"> 
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>베이컨, 에그 & 치즈</strong>
                                             <p>오리지널 아메리칸 스타일 베이컨으로<br>더욱 풍성한 아침 식사</p>
                                         </div>
@@ -376,7 +376,7 @@
                                     <div class="swiper-slide">
                                         <div>
                                             <img src="https://i.ibb.co/nLnw7Z0/sandwich-bf04.png" alt="sandwich_스테이크, 에그 & 치즈">
-                                            <img src="https://i.ibb.co/sp4hdvs/hover-look.png" alt="hover-look">
+                                            <img src="https://i.ibb.co/mzvmDkr/more-symbol.png" alt="more-symbol"/>
                                             <strong>스테이크, 에그 & 치즈</strong>
                                             <p>육즙 가득 비프 스테이크로<br>든든한 아침 식사</p>
                                         </div>
@@ -442,7 +442,7 @@
                 </a>
                 <a>
                     <div class="wrapBottom_Ch">
-                        <img src="https://i.ibb.co/52vXwfj/footer-mab.png" alt="footer-branchOffice_icon"/>
+                        <img src="https://i.ibb.co/x1FZ6H7/branch-symbol.png" alt="branch-symbol"/>
                         <div>
                             <span>지사안내</span>
                             <span>수도권/지방 지사정보</span>
@@ -451,7 +451,7 @@
                 </a>
                 <a>
                     <div class="wrapBottom_Ch">
-                        <img src="https://i.ibb.co/k2bp3sc/footer-y.png" alt="footer-advertisement_icon"/>
+                        <img src="https://i.ibb.co/MGJSDj2/advertisement-symbol.png" alt="advertisement-symbol"/>
                         <div>
                             <span>광고영상</span>
                             <span>TV광고/동영상</span>
