--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -399,7 +399,7 @@
                         </div>
                         <div class="oat_history">
                             <div>
-                                <img src="./img/main.png" alt="oneandthree main logo">
+                                <img src="./img/main_symbol@2x.png" alt="oneandthree main logo">
                             </div>
                             <div>
                                 <p>역사를 가진<br>No.1 프렌차이즈의 성장기</p>
@@ -423,7 +423,7 @@
                             </div>
                         </div>
                         <div class="oat_banner">
-                            <img src="https://i.ibb.co/68XP06m/sub-Banner.png" alt="sub-Banner" >
+                            <img src="./img/subBanner.png" alt="sub-Banner" >
                         </div>
                     </div>
                 </div>
